@@ -15,6 +15,7 @@ Ver.5.12-dev (in development)
 - [WIP] Update deploy.sh and Vagrantfile etc. for the INTER-Mediator-Server VM (Update to Alpine Linux 3.13).
 - [INFO] Drop support for PHP 5.2 and PHP 5.3.
 - [INFO] Drop support for FileMaker Server 11, 12 and 13.
+- [BUG FIX] Fix handling Claris FileMaker's checkbox set feature when using DB_FileMaker_DataAPI class.
 
 Ver.5.11 (November 17, 2019)
 - Support FileMaker Data API of FileMaker Server 18 and FileMaker Cloud for AWS 1.18.
